# ncnn

./: build2.sh
examples/: .squeezenet.cpp.swp
liuchao/: .net.cpp.swp  CMakeLists.txt  net.cpp  run_net.sh  squueze.cpp
