cmake_minimum_required(VERSION 3.16)
message(STATUS "hello wolrd")
find_package(OpenCV)
message(STATUS "found opencv? " "${OpenCV_FOUND}")
message(STATUS "OpenCV install path " "${OpenCV_INSTALL_PATH}")
message(STATUS "OpenCV LIBS path " ${OpenCV_LIBS})
set(ncnn_install "/home/liuchao/prs/ncnn/build-host-gcc-linux/install")
FIND_PACKAGE( OpenMP REQUIRED)
if(OPENMP_FOUND)
message("OPENMP FOUND")
set(CMAKE_C_FLAGS "${CMAKE_C_FLAGS} ${OpenMP_C_FLAGS}")
set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} ${OpenMP_CXX_FLAGS}")
set(CMAKE_EXE_LINKER_FLAGS "${CMAKE_EXE_LINKER_FLAGS} ${OpenMP_EXE_LINKER_FLAGS}")
endif()
add_executable(net net.cpp)
target_include_directories(net PRIVATE ${ncnn_install}/include)
target_link_libraries(net PRIVATE ${OpenCV_LIBS} ${ncnn_install}/lib/libncnn.a)
set_property(TARGET net PROPERTY FOLDER "../examples")
